syntax = "proto3";

package proto;

// The remote PiGlow service
service PiGlow {
  // SetLED
  rpc SetLED (LedRequest) returns (Ack) {}
}

message LedRequest {
  int32 num = 1;
  uint32 brightness = 2;
}

message Ack {
  bool ok = 1;
}
